--- a/.github/workflows/main_webapp.yml
+++ b/.github/workflows/main_webapp.yml
@@ -70,6 +70,7 @@ jobs:
           app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
-          package: .
+          package: release.zip
+
 
 
